--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wowza-webrtc-client-react",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "WoWza WebRTC Player/Client (React Component).",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -21,10 +21,7 @@
     "react": "^16.8.4",
     "typescript": "^3.3.3333"
   },
-  "peerDependencies": {
-    "react": "^16.8.4"
-  },
   "dependencies": {
-    "wowza-webrtc-client": "^0.0.6"
+    "wowza-webrtc-client": "0.0.7"
   }
 }
